[gd_scene load_steps=38 format=3 uid="uid://exluca04i7q7"]

[ext_resource type="Script" path="res://Script/player.gd" id="1_hgpth"]
[ext_resource type="Texture2D" uid="uid://wema6wpjlkss" path="res://player/Character 9.png" id="3_wgmn7"]
[ext_resource type="Texture2D" uid="uid://cdpmewq7anbk4" path="res://player/Character 9-reverse.png" id="5_2k1vm"]
[ext_resource type="Texture2D" uid="uid://drkppsyeo5cao" path="res://Shadows/SmallShadow.png" id="6_rjlbx"]
[ext_resource type="PackedScene" uid="uid://cccmlwlu08hrp" path="res://Scene/hud.tscn" id="7_thno4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xejqt"]
atlas = ExtResource("3_wgmn7")
region = Rect2(64, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t52ut"]
atlas = ExtResource("3_wgmn7")
region = Rect2(128, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3mwm"]
atlas = ExtResource("3_wgmn7")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7b8d"]
atlas = ExtResource("3_wgmn7")
region = Rect2(192, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7afv"]
atlas = ExtResource("3_wgmn7")
region = Rect2(256, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bov4v"]
atlas = ExtResource("3_wgmn7")
region = Rect2(320, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_32wi4"]
atlas = ExtResource("3_wgmn7")
region = Rect2(384, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3nlw"]
atlas = ExtResource("3_wgmn7")
region = Rect2(448, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3d0s"]
atlas = ExtResource("3_wgmn7")
region = Rect2(512, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1v04"]
atlas = ExtResource("5_2k1vm")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yp6uo"]
atlas = ExtResource("5_2k1vm")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwdil"]
atlas = ExtResource("5_2k1vm")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_howfr"]
atlas = ExtResource("5_2k1vm")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf5xy"]
atlas = ExtResource("3_wgmn7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw4rh"]
atlas = ExtResource("3_wgmn7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_btys4"]
atlas = ExtResource("3_wgmn7")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n408t"]
atlas = ExtResource("3_wgmn7")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy600"]
atlas = ExtResource("5_2k1vm")
region = Rect2(704, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1bdm"]
atlas = ExtResource("5_2k1vm")
region = Rect2(640, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvqml"]
atlas = ExtResource("5_2k1vm")
region = Rect2(576, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8ifn"]
atlas = ExtResource("5_2k1vm")
region = Rect2(512, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_doibi"]
atlas = ExtResource("5_2k1vm")
region = Rect2(448, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv6et"]
atlas = ExtResource("5_2k1vm")
region = Rect2(384, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_svlxm"]
atlas = ExtResource("3_wgmn7")
region = Rect2(0, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cpmh"]
atlas = ExtResource("3_wgmn7")
region = Rect2(64, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rebr"]
atlas = ExtResource("3_wgmn7")
region = Rect2(128, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnnfk"]
atlas = ExtResource("3_wgmn7")
region = Rect2(192, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_26dno"]
atlas = ExtResource("3_wgmn7")
region = Rect2(256, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t804p"]
atlas = ExtResource("3_wgmn7")
region = Rect2(320, 1024, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_xqj38"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xejqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t52ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3mwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7b8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7afv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bov4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32wi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3nlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3d0s")
}],
"loop": true,
"name": &"death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1v04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yp6uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwdil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_howfr")
}],
"loop": true,
"name": &"idle_girl_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf5xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw4rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btys4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n408t")
}],
"loop": true,
"name": &"idle_girl_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy600")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1bdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvqml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8ifn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doibi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv6et")
}],
"loop": true,
"name": &"walkleft_girl",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_svlxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cpmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rebr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnnfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26dno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t804p")
}],
"loop": true,
"name": &"walkright_girl",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_72wcm"]
radius = 15.2971

[sub_resource type="CircleShape2D" id="CircleShape2D_vwnlw"]
radius = 39.0

[node name="player" type="CharacterBody2D" groups=["player"]]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_hgpth")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -11)
scale = Vector2(2.389, 2.399)
sprite_frames = SubResource("SpriteFrames_xqj38")
animation = &"death"
frame_progress = 0.591301

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 10)
shape = SubResource("CircleShape2D_72wcm")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.065, 2.065)
limit_left = 0
limit_top = 0
limit_right = 1170
limit_bottom = 640

[node name="SmallShadow" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(1, 22)
scale = Vector2(5.25, 4.5625)
texture = ExtResource("6_rjlbx")

[node name="player_hitbox" type="Area2D" parent="."]
position = Vector2(0, 3)
scale = Vector2(1.135, 1.135)

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_vwnlw")

[node name="on_attack_cooldown" type="Timer" parent="."]
wait_time = 0.7

[node name="weapon_holder" type="Node2D" parent="."]
position = Vector2(0, 8)

[node name="health_bar" type="ProgressBar" parent="."]
offset_left = -38.0
offset_top = -68.0
offset_right = 125.0
offset_bottom = -27.0
scale = Vector2(0.465, 0.465)

[node name="regin_timer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="HUD" parent="." instance=ExtResource("7_thno4")]

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="on_attack_cooldown" to="." method="_on_on_attack_cooldown_timeout"]
[connection signal="timeout" from="regin_timer" to="." method="_on_regin_timer_timeout"]
